# basketball-game

./: .gitignore  README  README.md  imgui.ini
build-cmake-Desktop_Qt_5_12_0_GCC_64bit-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  pgm.cbp
cmake/: CMakeLists.txt
precompiled/glfw3_win/: README
shaders/mesh/: shader.frag.glsl
src/: exercise_current.hpp  helper_scene.cpp  helper_scene.hpp  main.cpp
src/exercises/: exercises.hpp
src/exercises/Projet/: Projet.cpp  Projet.hpp
src/exercises/base_exercise/: base_exercise.cpp  base_exercise.hpp
src/vcl/: vcl.hpp
src/vcl/core/: core.hpp
src/vcl/core/drawable/: drawable.hpp
src/vcl/core/drawable/curve_drawable/: curve_drawable.cpp  curve_drawable.hpp
src/vcl/core/drawable/curve_dynamic_drawable/: curve_dynamic_drawable.cpp
src/vcl/core/drawable/drawable_uniform/: drawable_uniform.cpp  drawable_uniform.hpp
src/vcl/core/drawable/mesh_drawable/: mesh_drawable.cpp  mesh_drawable.hpp
src/vcl/core/drawable/mesh_drawable_hierarchy/: mesh_drawable_hierarchy.cpp  mesh_drawable_hierarchy.hpp
src/vcl/core/drawable/segment_drawable_immediate_mode/: segment_drawable_immediate_mode.cpp  (+1 more)
src/vcl/core/helper/: helper.hpp
src/vcl/core/math/: math.hpp
src/vcl/core/opengl/: opengl.hpp
src/vcl/core/shape/: shape.hpp
src/vcl/external_lib/glfw/: glfw.hpp
src/vcl/external_lib/headers/: glad.hpp  imgui.hpp  lodepng.hpp  simplexnoise.hpp
src/vcl/external_lib/imgui/: imgui.hpp
src/vcl/external_lib/lodepng/: lodepng.cpp  lodepng.hpp
src/vcl/external_lib/perlin/: perlin.hpp
(+52 files in other folders)
